2020-04-30  Mark Wielaard  <mark@klomp.org>

	* find-debuginfo.c (dwfl_standard_find_debuginfo): When mod->dw
	is already set then try fetching debugaltlink.

2020-04-25  Mark Wielaard  <mark@klomp.org>

	* gzip.c (open_stream): Return DWFL_E_NOMEM instead of calling
	zlib_fail.

2020-04-16  Mark Wielaard  <mark@klomp.org>

	* find-debuginfo.c (dwfl_standard_find_debuginfo): Initialize bits
	to NULL.

2020-01-24  Mark Wielaard  <mark@klomp.org>

	* linux-kernel-modules.c (find_kernel_elf): Check release isn't NULL.
	(report_kernel): Check release and *release aren't NULL.
	(report_kernel_archive): Likewise.

2019-12-11  Omar Sandoval  <osandov@fb.com>

	* libdwflP.h (Dwfl_Module): Remove coalescing state.
	Rename lookup_tail_ndx to next_segndx.
	* segment.c (dwfl_report_segment): Remove coalescing logic.
	* libdwfl.h (dwfl_report_segment): Document that IDENT is ignored.

2019-12-05  Mark Wielaard  <mark@klomp.org>

	* linux-kernel-modules.c (find_kernel_elf): Also try to find
	vmlinux image.

2019-10-28  Aaron Merey  <amerey@redhat.com>

	* dwfl_build_id_find_elf.c (dwfl_build_id_find_elf): Call debuginfod
	client functions via dlopen to look for elf/dwarf files as fallback.
	* find-debuginfo.c (dwfl_standard_find_debuginfo): Ditto.

2019-10-07  Omar Sandoval  <osandov@fb.com>

	* dwfl_frame.c (dwfl_getthreads): Get rid of unnecessary
	thread_free_all_states calls.
	(getthread): Ditto.
	(state_free): Remove function.
	(thread_free_all_states): Remove function.
	(free_states): Add function.
	(dwfl_thread_getframes): Don't update thread->unwound while unwinding.
	* libdwflP.h (struct Dwfl_Thread): Update comment for unwound member.

2019-08-12  Mark Wielaard  <mark@klomp.org>

	* gzip.c (open_stream): Return DWFL_E_ERRNO on bad file operation.
	* open.c (libdw_open_elf): New argument bad_elf_ok. Check it and
	return DWFL_E_NOERROR in case it is set and error was DWFL_E_BADELF.
	(__libdw_open_file): Call libdw_open_elf with bad_elf_ok false.